Fix flaky assertion hit under AudioSummingJunction::removeOutput() https://bugs.webkit.org/show_bug.cgi?id=225951

Reviewed by Eric Carlson.

Temporarily disable assertion preventing heap allocations on the audio thread
in AudioSummingJunction::removeOutput() as it is flakily hitting on the bots.

* Modules/webaudio/AudioSummingJunction.cpp:
(WebCore::AudioSummingJunction::removeOutput):


Canonical link: https://commits.webkit.org/237900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277721 268f45cc-cd09-0410-ab3c-d52691b4dbfc